# elikar_scene

./: Cargo.toml  README.md
examples/: gltf.rs
gltf_files/: cube.gltf  cube.png.raw  test.gltf  untitled.gltf
src/: gltf.rs  image.rs  lib.rs  mesh.rs  node.rs  texture.rs
src/camera/: camera2d.rs  camera3d.rs  mod.rs
src/gltf/: buffer.rs  error.rs  image.rs  mesh.rs  mod.rs  texture.rs
src/material/: mod.rs
src/mesh/: attributes.rs  data_type.rs  mod.rs  vertices.rs
src/transform/: mod.rs  transform2d.rs  transform3d.rs
